--- a/style.css
+++ b/style.css
@@ -11,30 +11,61 @@ body{
     background-color: aqua;
 
 }
-.container{
+
+#emoji{
+    font-size: 100px;
+    margin-bottom: 20px;
+}
+select{
+    font-size: 18px;
+    padding: 8px;
+}
+/*.container{
     background-color: white;
-    margin: 100px;
-    padding: 50px;
-    border-radius: 1rem;
+   
+    padding: 80px;
+    border-radius: 20px;
     border: none;
     text-align: center;
     
 
 }
 h1{
-    margin-bottom: 40px;
+    font-size: 2rem;
+    margin-bottom: 50px;
+    color:#333;
 }
 
-button{
-     padding: 10px;
-     margin-bottom: 20px;
-     font-family: Arial, Helvetica, sans-serif;
-     border-radius: 1rem;
-     border: none;
+.buttons button{
+     padding: 12px 20px;
+    margin: 0 10px;
+    font-size: 1.2rem;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+    transition: 0.2s ease-in-out;
+    margin-top: 40px;
 }
-button:hover{
-    background-color: aquamarine;
+#increment{
+    background-color: #22c55e;
+    color: white;
+
 }
-p{
-    font-size: 30px;
+#decrement{
+    background-color: #ef4444;
+    color: white;
 }
+#reset{
+    background-color: #3b82f6;
+    color: white;
+
+}
+.buttons button:hover{
+    transform: scale(1.05);
+    opacity: 0.9;
+}
+.counter{
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+    font-weight: bold;
+}*/
